--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
                 </label>
 
                 <ul class="d-flex gap-4 align-item-center nav_bar">
-                    <li><a class="hover_line" href="#">HOME</a></li>
-                    <li><a class="hover_line" href="#">EVENTS</a></li>
-                    <li><a class="hover_line" href="#">FEED</a></li>
-                    <li><a class="hover_line" href="#">USER NAME</a></li>
+                    <li><a class="hover_line" href="#home">HOME</a></li>
+                    <li><a class="hover_line" href="#events">EVENTS</a></li>
+                    <li><a class="hover_line" href="#feed">FEED</a></li>
+                    <li><a class="hover_line" href="#username">USER NAME</a></li>
                     <li><a class="log_out" href="#">Log out</a></li>
                 </ul>
             </nav>
-            <div class="flex_grow  flex-column d-flex py-5 justify-center">
+            <div id="home" class="flex_grow  flex-column d-flex py-5 justify-center">
                 <h1 class="max-width1044 fs_3xl text-white poppins fw_bold mb-3 heading ">Sed tortor in
                     <span class="under_line2">quisque morbi</span>
                     scelerisque
@@ -90,7 +90,7 @@
             </div>
     </section>
     <section>
-        <div class="container">
+        <div id="events" class="container">
             <div class="row  align-item-center py-5 ">
                 <div class="col_12 ima-relative d-flex justify-center justify-content-lg-start col-lg-6">
                     <div class="image_icon d-flex justify-center align-item-center img-abs">
@@ -161,7 +161,7 @@
         </div>
     </section>
     <section class="bg_img3">
-        <div class="container">
+        <div id="feed" class="container">
             <div class="d-flex justify-center flex-column align-item-center text-center ">
                 <h1 class="max-width708 pt-5 fw_bold fs_2xl text-white">Lorem ipsum dolor sit amet, consectetur</h1>
                 <p class="max-width765 pt-5 fw_normal fs_sm text-white pb-5">Lorem ipsum dolor sit amet, consectetur
@@ -181,14 +181,14 @@
                     </div>
 
                 </div>
-                <div class="col_lg_3 col-lg-6">
+                <div class="col_lg_3 col-6">
                     <div class="d-flex justify-center flex-column align-item-center">
                         <img src="./assets/images/png/Vector (2).png" alt="vector">
                         <h3 class="fw_bold fs_xl text-white">800</h3>
                         <p class="fw_normal fs_md text-white">TOPICS</p>
                     </div>
                 </div>
-                <div class="col_lg_3 col-lg-6">
+                <div class="col_lg_3 col-6 mt_3">
                     <div class="d-flex justify-center flex-column align-item-center">
                         <img src="./assets/images/png/Vector (3).png" alt="vector">
                         <h3 class="fw_bold fs_xl text-white">50</h3>
@@ -196,7 +196,7 @@
                     </div>
 
                 </div>
-                <div class="col_lg_3 col-lg-6">
+                <div class="col_lg_3 col-6 mt_3">
                     <div class="d-flex justify-center flex-column align-item-center">
                         <img src="./assets/images/png/Vector (4).png" alt="vector">
                         <h3 class="fw_bold fs_xl text-white">30</h3>
@@ -207,7 +207,7 @@
         </div>
     </section>
     <section>
-        <div class="container">
+        <div id="username" class="container">
             <div class="row py-5 ">
                 <div class="col_lg_5 ">
                     <h3 class="fw_bold fs_2xl max_width338 under-line">Explore our latest events</h3>
